[package]
name = "mbdfez"
version = "0.1.0"
authors = ["extrasharp <genericpb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.6"
bdf-font = { git = "https://github.com/extrasharp/bdf-font" }
